<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scrapbooking App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Taj">Taj Mahal</string>
    <string name="Guru">Golden temple</string>
    <string name="Machu">Machu Pichu</string>
    <string name="SFO">Golden Bridge</string>
    <string name="taj_mahal">Taj Mahal</string>
    <string name="golden_bridge">Golden Bridge</string>
    <string name="machu_pichu">Machu Pichu</string>
    <string name="golden_temple">Golden Temple</string>

    

</resources>
