<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scrapbookingapp.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/Guru"
        android:src="@drawable/goldentemple" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Machu"
        android:src="@drawable/machupicchu" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/SFO"
        android:src="@drawable/sanfrancisco" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/Taj"
        android:src="@drawable/tajmahal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="32dp"
        android:text="@string/taj_mahal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView4"
        android:layout_marginBottom="33dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/golden_bridge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginBottom="36dp"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/imageView2"
        android:text="@string/machu_pichu" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginBottom="32dp"
        android:text="@string/golden_temple" />

</RelativeLayout>
